feat: init project with must-have bits to start

--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -1,6 +1,8 @@
 # Markdown renderer configuration
 [goldmark.renderer]
 unsafe = false
+[goldmark.parser.attribute]
+block = true
 
 [tableOfContents]
 endLevel = 4
