--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,16 +1,19 @@
 # Change baseurl before deploy
-baseurl = "https://demo.stack.jimmycai.com"
-languageCode = "en-us"
+baseurl = "https://hugo.jeremielitzLer.fr"
+languageCode = "fr-fr"
 paginate = 5
-title = "Hugo Theme Stack Starter"
+title = "[[TODO config > title]]"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
-defaultContentLanguage = "en"
+defaultContentLanguage = "fr"
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
 hasCJKLanguage = false
 
 # Change it to your Disqus shortname before using
-disqusShortname = "hugo-theme-stack"
+# disqusShortname = "hugo-theme-stack"
+
+[params]
+custom_css = ["css/custom-style.css"]
