--- a/config/_default/_languages.toml
+++ b/config/_default/_languages.toml
@@ -1,6 +1,6 @@
 # Rename this file to languages.toml to enable multilingual support
-[en]
+[fr]
 languageName = "Français"
 languagedirection = "ltr"
-title = "[[TODO]]"
+title = "Jérémie Litzler"
 weight = 1
