--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 baseurl = "https://hugo.jeremielitzLer.fr"
 languageCode = "fr-fr"
 paginate = 5
-title = "[[TODO config > title]]"
+title = "Jérémie Litzler"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
