fix: override the sidebar > left to use p instead h1

--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -18,7 +18,7 @@ icon = "brand-github"
 [[social]]
 identifier = "twitter"
 name = "Twitter"
-url = "https://twitter.com"
+url = "https://twitter.com/LitzlerJeremie"
 
 [social.params]
 icon = "brand-twitter"
