--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,11 +1,11 @@
 locale: fr
 backend:
   name: github
-  repo: JeremieLitzler/journal-fr
+  repo: JeremieLitzler/jeremielitzler.fr-with-hugo-theme-stack
   branch: main # Branch to update (optional; defaults to master)
 publish_mode: editorial_workflow
-media_folder: 'docs/.vuepress/public/images'
-public_folder: 'docs/.vuepress/dist/'
+media_folder: 'static/images'
+public_folder: 'public/'
 collections:
   - name: 'root' # Used in routes, e.g., /admin/collections/blog
     label: 'Root folder' # Used in the UI
