--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,8 +8,8 @@ media_folder: 'static/images'
 public_folder: 'public'
 collections:
   - name: 'root' # Used in routes, e.g., /admin/collections/blog
-    label: 'Root folder' # Used in the UI
-    folder: 'docs' # The path to the folder where the documents are stored
+    label: 'Contenu' # Used in the UI
+    folder: 'content' # The path to the folder where the documents are stored
     nested:
       depth: 5 # max depth to show in the collection tree = 100
       summary: '{{title}}' # optional summary for a tree node, defaults to the inferred title field
@@ -18,16 +18,9 @@ collections:
     fields: # The fields for each document, usually in front matter
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Featured image', name: 'heroImage', widget: 'image' }
-      - { label: 'Featured image Atl text', name: 'heroAlt', widget: 'string' }
+      - { label: 'Featured image', name: 'image', widget: 'image' }
+      - { label: 'Featured image Atl text', name: 'imageAlt', widget: 'string' }
       - { label: 'Publishing Date', name: 'date', widget: 'datetime' }
-      - { label: 'Head meta tags', name: 'head', widget: 'list' }
-      - { label: 'Category', name: 'category', widget: 'list' }
-      - { label: 'Tag', name: 'tag', widget: 'list' }
-      - {
-          label: 'Published',
-          name: 'article',
-          widget: 'boolean',
-          default: 'false',
-        }
+      - { label: 'Category', name: 'categories', widget: 'list' }
+      - { label: 'Tag', name: 'tags', widget: 'list' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
