--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Featured image', name: 'image', widget: 'image' }
-      - { label: 'Featured image Atl text', name: 'imageAlt', widget: 'string' }
+      - { label: 'Featured image Alt text', name: 'imageAlt', widget: 'string' }
       - { label: 'Publishing Date', name: 'date', widget: 'datetime' }
       - { label: 'Category', name: 'categories', widget: 'list' }
       - { label: 'Tag', name: 'tags', widget: 'list' }
