--- a/netlify.toml
+++ b/netlify.toml
@@ -352,6 +352,35 @@ to = "/post/2023-08/maison-semi-enterree-en-autonomie"
 status = 301
 force = true
 
+[[redirects]]
+from = "/post/2022-05/les-bases-d-une-installation-solaire-en-autonomie-larchipelle/"
+to = "/post/2022-05/les-bases-d-une-installation-solaire-en-autonomie/"
+status = 301
+force = true
+
+[[redirects]]
+from = "/post/2023-01/eglantier-immunite-circulation-et-articulations-altheaprocence/"
+to = "/post/2023-01/eglantier-immunite-circulation-et-articulations"
+status = 301
+force = true
+
+[[redirects]]
+from = "/post/2023-01/le-rosier-sauvage-bourgeons-et-cynorhodons-le-chemin-de-la-nature/"
+to = "/post/2023-01/le-rosier-sauvage-bourgeons-et-cynorhodons/"
+status = 301
+force = true
+
+[[redirects]]
+from = "/post/2023-02/recette-aux-orties-et-au-lierre-terrestre-le-chemin-de-la-nature/"
+to = "/post/2023-02/recette-aux-orties-et-au-lierre-terrestre/"
+status = 301
+force = true
+
+[[redirects]]
+from = "/post/2023-03/galette-de-sarrasin-ecolo-au-pesto-dortie-noix-lenergie-autrement/"
+to = "/post/2023-03/galette-de-sarrasin-ecolo-au-pesto-dortie-noix/"
+status = 301
+force = true
 
 #[[headers]]
 #for = "/*"
