--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,11 +16,11 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Titre', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Featured image', name: 'image', widget: 'image' }
-      - { label: 'Featured image Alt text', name: 'imageAlt', widget: 'string' }
-      - { label: 'Publishing Date', name: 'date', widget: 'datetime' }
-      - { label: 'Category', name: 'categories', widget: 'list' }
-      - { label: 'Tag', name: 'tags', widget: 'list' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: 'Image', name: 'image', widget: 'image' }
+      - { label: 'Text alternatif de l'image', name: 'imageAlt', widget: 'string' }
+      - { label: 'Date de publication', name: 'date', widget: 'datetime' }
+      - { label: 'Categories', name: 'categories', widget: 'list' }
+      - { label: 'Tags', name: 'tags', widget: 'list' }
+      - { label: 'Corps', name: 'body', widget: 'markdown' }
