--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,3 +1,8 @@
+#On 2024-03-12
+#Updated build timeout to 60s instead of the default 30s
+#Netlify build reached just > 30s
+timeout = "60s"
+
 # Change baseurl before deploy
 baseurl = "https://jeremielitzLer.fr"
 languageCode = "fr-fr"
