--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.6.0",
     "tinacms": "^1.5.28"
   },
   "devDependencies": {
