push functions to see if it works online

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
 [build]
 ignore = "exit 1"
 publish = "public"
+functions = "functions"
 
 [[plugins]]
 package = "netlify-plugin-hugo-cache-resources"
