--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tinacms dev -c \"hugo server -D\"",
     "build": "tinacms build && hugo",
+    "netlify": "netlify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
