--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,7 +8,7 @@ baseurl = "https://jeremielitzLer.fr"
 languageCode = "fr-fr"
 paginate = 8
 title = "Jérémie Litzler"
-description = "Je partage ici mes notes et experiences que, je suis sûr, seront utiles pour au moins une personne. Bonne lecture !"
+description = "Je partage ici mes notes et experiences qui, je suis sûr, seront utiles pour au moins une personne. Bonne lecture !"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
