set default opengraph

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -62,9 +62,9 @@ site = ""
 card = "summary_large_image"
 
 [defaultImage.opengraph]
-enabled = false
-local = false
-src = ""
+enabled = true
+local = true
+src = "img/profilepic-400w.jpg"
 
 [colorScheme]
 toggle = true
