fix(seo): http 404 on google indexing

--- a/netlify.toml
+++ b/netlify.toml
@@ -60,6 +60,12 @@ status = 301
 force = true
 
 [[redirects]]
+from = "/categories/developpement-web/"
+to = "/categories/développement-web/"
+status = 301
+force = true
+
+[[redirects]]
 from = "/categories/developpement/"
 to = "/categories/développement-web/"
 status = 301
